@@ -10,6 +10,6 @@ EXTRA_DIST = utils_base.h utils_disk.h utils_tcp.h utils_cmd.h base64.h
 
 INCLUDES = -I$(srcdir) -I$(top_srcdir)/gl -I$(top_srcdir)/intl -I$(top_srcdir)/plugins
 
-test:
-	cd tests && make test
+test test-debug:
+	cd tests && make $@
 
