@@ -16,6 +16,7 @@ This file documents the major additions and syntax changes between releases.
 	Fix check_disk reporting OK if disk usage grows over 100% (bug #1348746).
 	  The problem happens to be in Gnulib but a workaround have been implemented in check_disk.c
 	Fix check_load argument handling when not passing triplets (bug #1831890)
+	Tinderbox builds now run tests in a verbose mode
 
 1.4.10 28th September 2007
 	Fix check_http buffer overflow vulnerability when following HTTP redirects
